# ParticleScatteringSchrodinger

./: CMakeLists.txt  README.md
src/: main.cpp  sim.cu  sim.cuh
